// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LinearProgress animates to new values 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "minWidth": "300px",
    }
  }
>
  <div
    data-css-f5n0d7=""
  >
    <div
      aria-live="off"
      data-css-6wu9td=""
      role="region"
    >
      0% complete
    </div>
    <div
      data-css-lskj0=""
    />
  </div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Value: 
    0
  </div>
</div>
`;

exports[`Storyshots LinearProgress fills container 1`] = `
<div
  style={
    Object {
      "background": "rgba(0, 100, 255, 0.5)",
      "padding": "8px",
      "width": "200px",
    }
  }
>
  <div
    data-css-f5n0d7=""
  >
    <div
      aria-live="off"
      data-css-6wu9td=""
      role="region"
    >
      66% complete
    </div>
    <div
      data-css-1y8zqkb=""
    />
  </div>
</div>
`;

exports[`Storyshots LinearProgress min width, no val 1`] = `
<div
  data-css-f5n0d7=""
>
  <div
    aria-live="off"
    data-css-6wu9td=""
    role="region"
  >
    0% complete
  </div>
  <div
    data-css-lskj0=""
  />
</div>
`;

exports[`Storyshots LinearProgress value, 0% 1`] = `
<div
  data-css-f5n0d7=""
>
  <div
    aria-live="off"
    data-css-6wu9td=""
    role="region"
  >
    0% complete
  </div>
  <div
    data-css-lskj0=""
  />
</div>
`;

exports[`Storyshots LinearProgress value, 33% 1`] = `
<div
  data-css-f5n0d7=""
>
  <div
    aria-live="off"
    data-css-6wu9td=""
    role="region"
  >
    33% complete
  </div>
  <div
    data-css-6wpswa=""
  />
</div>
`;

exports[`Storyshots LinearProgress value, 50% 1`] = `
<div
  data-css-f5n0d7=""
>
  <div
    aria-live="off"
    data-css-6wu9td=""
    role="region"
  >
    50% complete
  </div>
  <div
    data-css-qfqbsq=""
  />
</div>
`;

exports[`Storyshots LinearProgress value, 100% 1`] = `
<div
  data-css-f5n0d7=""
>
  <div
    aria-live="off"
    data-css-6wu9td=""
    role="region"
  >
    100% complete
  </div>
  <div
    data-css-1hrjrcb=""
  />
</div>
`;

exports[`Storyshots LinearProgress value, 999% 1`] = `
<div
  data-css-f5n0d7=""
>
  <div
    aria-live="off"
    data-css-6wu9td=""
    role="region"
  >
    999% complete
  </div>
  <div
    data-css-1hrjrcb=""
  />
</div>
`;
